ST-102: implement current player profile
